--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 TG_API_KEY = 8157374263:AAH9XNwfzxtigUJyog8F16FwhWiUH2jbOc4
 RPC_URL = "https://mainnet.helius-rpc.com/?api-key=12fc1a22-7457-4008-b910-cd9b2b864925"
 ADMIN_WALLET = HjQC76Aca64sd7uzjGPA3QP1WPmfLMkoVQAq3UZFUvZt
-MONGO_URI = mongodb+srv://blackhorsecryptodev:P8YwgB1td4u8mz6A@cluster0.1wf5n.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://colonelme9284:Ozj0xBW4Oq4Wa7ZT@cluster0.bat9g.mongodb.net/?retryWrites=true&w=majority
 BIRD_EYE_API_KEY = 7428e68b8e874fddbf4fb70c58c30bdc
